# scout-vision

./: Cargo.toml  LICENSE  README.md
opencv-embedded/: Cargo.toml  build.rs
opencv-embedded/src/: lib.rs  opencv_wrapper.c  opencv_wrapper.cpp
src/: main.rs  motor_control.rs  pathfinding.rs  vision.rs  vision_bridge.py  web.rs
src/vision/: imx500_yolov8.rs
static/: index.html
