[package]
name = "scout_hardware"
version = "0.1.0"
edition = "2021"
authors = ["CartesianXR7"]
description = "Safety-critical Mars Rover vision and control system"

[dependencies]
# ONNX Runtime for YOLOv8
ort = { version = "1.16", default-features = false, features = ["download-binaries"] }
ndarray = "0.15"
bytes = "1.10"

# Image processing
image = { version = "0.24", default-features = false, features = ["jpeg", "png"] }
imageproc = "0.23"  # For drawing bounding boxes
rusttype = "0.9"    # For text on images

# Core
anyhow = "1.0"
tokio = { version = "1.47", features = ["rt-multi-thread", "macros", "time", "sync", "process"] }
tokio-stream = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Camera
rscam = "0.5"
v4l = "0.14"

# Web server
warp = "0.3"
base64 = "0.21"
futures-util = "0.3"

# Hardware control
rppal = { version = "0.14", features = ["hal"] }  # For GPIO/I2C
linux-embedded-hal = "0.3"
embedded-hal = "0.2"

# Pathfinding
pathfinding = "4.3"

# Utilities
dashmap = "5.5"  # For concurrent hashmap
parking_lot = "0.12"  # Better mutexes
crossbeam-channel = "0.5"  # For message passing
once_cell = "1.19"
chrono = "0.4"
log = "0.4"
env_logger = "0.10"

# Your custom OpenCV bindings (if still needed for camera)
opencv-embedded = { path = "opencv-embedded" }

[[bin]]
name = "rover"
path = "src/main.rs"

[profile.dev]
opt-level = 1  # Some optimization even in debug

[profile.release]
opt-level = 2  # Not 3 - too heavy for Pi Zero 2W
lto = false    # Disable LTO to reduce compile time
codegen-units = 16  # More units = faster compile
