[package]
name = "scout_hardware"
version = "0.1.0"
edition = "2021"
authors = ["CartesianXR7"]
description = "Safety-critical Mars Rover vision and control system"

[dependencies]
# ONNX Runtime for YOLOv8
ort = { version = "1.16", default-features = false, features = ["download-binaries"] }
ndarray = "0.15"
bytes = "1.10"

# Image processing
image = { version = "0.24", default-features = false, features = ["jpeg", "png"] }
imageproc = "0.23"  
rusttype = "0.9"  

# Core
anyhow = "1.0"
tokio = { version = "1.47", features = ["rt-multi-thread", "macros", "time", "sync", "process"] }
tokio-stream = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Camera
rscam = "0.5"
v4l = "0.14"

# Web server
warp = "0.3"
base64 = "0.21"
futures-util = "0.3"

# Hardware control
rppal = { version = "0.14", features = ["hal"] } 
linux-embedded-hal = "0.3"
embedded-hal = "0.2"

# Pathfinding
pathfinding = "4.3"

# Utilities
dashmap = "5.5" 
parking_lot = "0.12" 
crossbeam-channel = "0.5" 
once_cell = "1.19"
chrono = "0.4"
log = "0.4"
env_logger = "0.10"

opencv-embedded = { path = "opencv-embedded" }

[[bin]]
name = "rover"
path = "src/main.rs"

[profile.dev]
opt-level = 1  

[profile.release]
opt-level = 2  
lto = false   
codegen-units = 16 
